# RuralBrain

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  DOCUMENTATION_CLEANUP.md  Dockerfile.backend  PLANNING_OPTIMIZATION_REPORT.md  PROJECT_OVERVIEW.md  README.md  build_kb_auto.py  commit_test.py  conversation_log_20251204_180228.txt  deploy_all.bat  docker-compose.all.yml  docker-compose.yml  encode_image.py  env  main.py  pyproject.toml  requirements.txt  run_frontend.bat  run_frontend.ps1  run_frontend.py  run_server.py  start.sh  test_agent_comparison.py  test_multi_round_comparison.py  test_optimization.py  test_rag_integration.py  test_skills_architecture.py  test_user_scenario.py
.github/: copilot-instructions.md
deploy/dev/: Dockerfile.backend  Dockerfile.detector  Dockerfile.planning  README.md  docker-compose.dev.yml
docs/: Agent架构升级方案.md  DEPLOYMENT_WORK_SUMMARY.md  DOCKER_DEPLOY.md  PLANNING_SERVICE_DEPLOYMENT.md  PROJECT_STRUCTURE_GUIDE.md  README.md  RuralBrain Agent 架构升级 - V2 Agent 集成实施计划.md  SERVICE_MANAGEMENT_GUIDE.md  SERVICE_PORT_MIGRATION_2026-01-26.md  V2 Agent 架构详解.md  frontend_guide.md  model_management.md  model_management_summary.md  multi_image_upload_guide.md  weekly_report_panzhaobin.md  weekly_reports_panzhaobin.md  场景demo.md
frontend/my-app/: .dockerignore  .gitignore  DESIGN_SYSTEM.md  Dockerfile  Dockerfile.dev  FRONTEND_CHANGES_SUMMARY.md  FRONTEND_OPTIMIZATION.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: test_detection.py  test_four_scenarios.py  test_orchestrator.py  test_simple.py
scripts/deploy/: run_frontend.bat  run_frontend.ps1  start.sh  start_backend.sh
service/: __init__.py  schemas.py  server.py  settings.py
src/: __init__.py  app.py  app2.py  config.py  cow_detection_agent.py  main.py  main4.py  main5.py  main_simple.py
tests/: _test_api_tool.py  _test_tool.py  run_fastapi_server.py  start_fastapi.bat  test_agent_ask_user.py  test_agent_auto.py  test_agent_memory_and_detection.py  test_direct_memory.py  test_fastapi_basic.py  test_fastapi_client.py  test_integration_planning.sh  test_langsmith.py  test_memory_function.py  test_misdetection.py  test_model_manager.py  test_multi_round_conversation.py
train14/: args.yaml  results.csv
(+187 files in other folders)
